fix: overflow dropdown styles for video-item

--- a/extension/popup/popup.scss
+++ b/extension/popup/popup.scss
@@ -503,7 +503,7 @@ header {
 .tab-content {
     display: none;
     height: 100%;
-    overflow-y: auto;
+    overflow-y: visible;
     scroll-behavior: smooth;
 
     &.active {
